--- a/glide.html
+++ b/glide.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./build/main.css">
 </head>
 <body>
     <h1>title</h1>
@@ -34,6 +35,6 @@
     </div>
 
 
-    <script src="./js/build/app.bundle.js"></script>
+    <script src="./build/app.bundle.js"></script>
 </body>
 </html>
